# HomeProject

./: .clang-format  .gitignore  BracketBalance  BracketBalance.c  FlippingTheArray.c  IncompleteSeparation.c  MarshallingYard.c  README.md  SortList.c  SubstringSearch.c  Task1.c  Task2.c  Task3.c  Tickets.c  balance  balance.c  calculating_the_polynomial.c  help1.c  help2.c  numzeroinarr.c  palindrome  palindrome.c  rhyme.c  sorting.py  sum  sum.c
.github/workflows/: ci.yml
Balance/src/: CMakeLists.txt  main.c
BinaryRepresentation/: CMakeLists.txt  main.c  numsys.c  numsys.h
BinaryRepresentation/tests/: test_num.c  test_num.h
BracketBalance/src/: CMakeLists.txt  check.c  check.h  main.c
CalculatingPolynmial/src/: CMakeLists.txt  main.c
CountZero/src/: CMakeLists.txt  count.c  main.c
FlipArr/src/: CMakeLists.txt  main.c
HappyTickets/src/: CMakeLists.txt  main.c
HelloWorld/src/: CMakeLists.txt
IncompletePrivate/src/: CMakeLists.txt  main.c
MarshallingYard/src/: CMakeLists.txt  converter.c  converter.h  main.c  stack.c  stack.h
OptimalSorting/src/: CMakeLists.txt  main.c  optSort.c  optSort.h
Queen/: complexity.md  enumeration.py  recursion.py
Rhyme/src/: CMakeLists.txt  list.c  list.h  main.c
SortedList/src/: CMakeLists.txt  list.c  list.h  main.c
SubstringSearch/src/: CMakeLists.txt  count.c  count.h  main.c
pok/: MarshallingYard.c  converter.c  converter.h  stack.c  stack.h
project/: Instruction.md  main.c  optSort.c  optSort.h  optSort.s
sort_list/: CMakeLists.txt  list.c  list.h  main.c
sort_list/tests/: test_list.c  test_list.h
